Almost working filters for public view

--- a/app/views/privatetrends.scala.html
+++ b/app/views/privatetrends.scala.html
@@ -136,7 +136,7 @@
                   .done(function(data) {
                     makeCharts(data, "#f-6h", 58, 62);
         divToSpinner['f-6h' ].stop();
-                  });  *@
+                  });  *@nes
             });
         </script>
     </body>
